Fixed positioning of portfolio project cards on mobile

--- a/src/.sections/projects/projects.styles.scss
+++ b/src/.sections/projects/projects.styles.scss
@@ -6,3 +6,11 @@
     flex-wrap: wrap;
   }
 }
+
+@media only screen and (max-width: 767px) {
+  .projects-section-wrapper {
+    .projects-section-container {
+      margin-left: 0;
+    }
+  }
+}
